Moved example to separate module instead of tests. Added opens to work in Java 17